--- a/src/main/resources/templates/pageFragments/Main.html
+++ b/src/main/resources/templates/pageFragments/Main.html
@@ -1,7 +1,7 @@
 <main id="main">
     <div id="topBox">
         <div id="infoBox">
-            <div id="headerText">
+            <div id="projectHeaderText">
                 <h4>Project name</h4>
             </div>
             <div id="descriptionText">
@@ -20,7 +20,18 @@
             <img id="projectPicture" src="../pictures/project1.jpg">
         </aside>
     </div>
-    <div id="loweBox">
+    <div id="lowerBox">
+        <div id="tempBox">
+            temp
+        </div>
+        <div id="tempBox2">
+            <aside id="temp2">temp</aside>
+            <aside id="linkBox">
+                <a href="#" class="link-primary">Primary link</a>
+                <a href="#" class="link-primary">Secondary link</a>
+            </aside>
+        </div>
+
 
     </div>
 </main>
