--- a/src/main/resources/static/Css/Navbar.css
+++ b/src/main/resources/static/Css/Navbar.css
@@ -7,10 +7,7 @@ height: 5%;
     font-size: 22px;
 
 }
-.dropdownButton{
-top: -50%;
-    left: -10%;
-}
+
 .dropdown-menu{
 
 
@@ -26,13 +23,17 @@ ul {
 margin-bottom: 2%;
 }
 
-.navbarItems{
-
+.navbarItemsBox{
+    background-color: #1E90FF;
+    position: relative;
+    right: 10%;
+    top: 15%;
     display: flex;
     flex-direction: row;
 
 
 }
+
 #hiddenButton{
     display: none;
 }
