--- a/src/main/resources/templates/pageFragments/Header.html
+++ b/src/main/resources/templates/pageFragments/Header.html
@@ -11,7 +11,7 @@
                         <div class="col-lg-7">
                             <div class="mt-40 text-center home-5-content">
                                 <div class="home-icon mb-4"><i class="mdi mdi-pinwheel mdi-spin text-white h1"></i></div>
-                                <h1 id="headerTex" class="text-white font-weight-normal home-5-title mb-0">Fredrik Granath's website</h1>
+                                <h1 id="headerText" class="text-white font-weight-normal home-5-title mb-0">Fredrik Granath's website</h1>
 
 
                             </div>
