--- a/src/main/resources/templates/Pages/AdminPage.html
+++ b/src/main/resources/templates/Pages/AdminPage.html
@@ -5,12 +5,12 @@
     <title>Title</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="stylesheet" href="../Css/PageWrapper.css">
-  <link rel="stylesheet" href="../Css/Main.css">
-  <link rel="stylesheet" href="../Css/Navbar.css">
-  <link rel="stylesheet" href="../Css/Header.css">
-  <link rel="stylesheet" href="../Css/Footer.css">
-  <link rel="stylesheet" href="../Css/AdminPage.css">
+  <link rel="stylesheet" href="../Css/fragments/PageWrapper.css">
+  <link rel="stylesheet" href="../Css/fragments/Main.css">
+  <link rel="stylesheet" href="../Css/fragments/Navbar.css">
+  <link rel="stylesheet" href="../Css/fragments/Header.css">
+  <link rel="stylesheet" href="../Css/fragments/Footer.css">
+  <link rel="stylesheet" href="../Css/pages/AdminPage.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
@@ -57,8 +57,9 @@
 
 </div>
 </div>
-<script src="../Js/Header.js"></script>
-<script src="../Js/Navbar.js"></script>
+<script src="../Js/fragments/SmallOperations.js"></script>
+<script src="../Js/fragments/Header.js"></script>
+<script src="../Js/fragments/Navbar.js"></script>
 <script src="../Js/pages/AdminPage.js"></script>
 
 </body>
