--- a/src/main/resources/templates/pageFragments/Navbar.html
+++ b/src/main/resources/templates/pageFragments/Navbar.html
@@ -7,7 +7,7 @@
                        My Projects
                      </button>
             <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-      <form action="/MainPage/getMain" class="projectForm" id="navDropdown">
+      <form action="/MainPage/getProject" class="projectForm" id="navDropdown">
 
 
       </form>
