--- a/src/main/resources/templates/Modals/AddProjectModal.html
+++ b/src/main/resources/templates/Modals/AddProjectModal.html
@@ -11,7 +11,7 @@
           <h4>AddProject</h4>
         </div>
         <div class="d-flex flex-column text-center">
-          <form action="/MainPage/addProject">
+          <form action="/AdminPage/addProject">
             <div class="form-group">
               <input type="text" placeholder="Header" name= "projectHeader" class="form-control" id="projectHeader">
             </div>
@@ -22,6 +22,9 @@
             <textarea id="description" placeholder="Description" name="desc" rows="4" cols="50"></textarea>
             <div class="form-group">
               <input type="text" placeholder="PicLink" name="pictureLink" class="form-control" id="pictureLink">
+            </div>
+            <div class="form-group">
+              <input type="text" placeholder="projectLink devide links with ," name="links" class="form-control" id="links">
             </div>
             <button type="submit" class="btn btn-info btn-block btn-round">Submit</button>
           </form>
