--- a/src/main/resources/templates/Modals/EditProjectModal.html
+++ b/src/main/resources/templates/Modals/EditProjectModal.html
@@ -11,7 +11,7 @@
           <h4>EditProject</h4>
         </div>
         <div class="d-flex flex-column text-center">
-          <form action="/MainPage/editProject">
+          <form action="/AdminPage/editProject">
             <input type="text" name="originalProjectName" hidden id="originalProjectName">
             <div class="form-group">
               <input type="text" name= "projectHeader" class="form-control" id="projectHeader">
@@ -25,6 +25,9 @@
               </textarea>
             <div class="form-group">
               <input type="text" name="pictureLink" class="form-control" id="pictureLink">
+            </div>
+            <div class="form-group">
+              <input type="text" name="projectLinks" class="form-control" id="projectLinks">
             </div>
             <button type="submit" class="btn btn-info btn-block btn-round">Submit</button>
           </form>
