--- a/src/main/resources/templates/Pages/HomePage.html
+++ b/src/main/resources/templates/Pages/HomePage.html
@@ -20,6 +20,7 @@
     //used to get pagename if gotten
     let pageDataJsonString = "[[${pageData}]]";
     let navbarDataJsonString = "[[${navData}]]";
+    let linksDataJsonString = "[[${links}]]";
 </script>
 
 
