--- a/src/main/resources/templates/Pages/AdminPage.html
+++ b/src/main/resources/templates/Pages/AdminPage.html
@@ -31,26 +31,52 @@
   <main id="main">
     <div id="mainContainer"><!-- need to make a replace like above but make javascript get a variable from cookies and check it and get from database the value associated with it -->
     <aside id="sideChoicesBox">
-      <h2>Choices</h2>
-      <form id="choiceButtons" action="/MainPage/allProjects">
-        <button class="btn btn-info btn-round choiceButton" type="submit" href="#"  id=""  aria-haspopup="true" aria-expanded="false">
-          See projects
-        </button>
-      </form>
-      <button class="btn btn-info btn-round choiceButton" onclick="addNewProject()" type="submit" href="#"  id=""  aria-haspopup="true" aria-expanded="false">
-        New Project
-      </button>
+      <ul id="choiceList">
+        <h2>Choices</h2>
+        <li class="choiceListItem">
+          <form id="choiceButtons" action="/MainPage/allProjects">
+            <button class="btn btn-info btn-round" type="submit" href="#"  id=""  aria-haspopup="true" aria-expanded="false">
+              See projects
+            </button>
+          </form>
+        </li>
+
+        <li class="choiceListItem">
+          <button class="btn btn-info btn-round" onclick="addNewProject()" type="submit" href="#"  id=""  aria-haspopup="true" aria-expanded="false">
+            New Project
+          </button>
+        </li>
+
+        <li class="choiceListItem">
+          <button class="btn btn-info btn-round" onclick="addNewUser()" type="submit" href="#"  id=""  aria-haspopup="true" aria-expanded="false">
+            Add user
+          </button>
+        </li>
+
+      </ul>
+
+
+
 
     </aside>
-    <ul id="showWindow">Projects</ul>
+    <div id="showWindow">
+        <div class="projectsBox">
+          <ul id="projectsUl">
+
+          </ul>
+        </div>
+    </div>
       </div>
   </main>
 
 
-  <div th:replace = "Modals/editProjectModal">
+  <div th:replace = "Modals/EditProjectModal">
 
   </div>
-  <div th:replace = "Modals/addProjectModal">
+  <div th:replace = "Modals/AddProjectModal">
+  </div>
+
+  <div th:replace = "Modals/AddUserModal">
   </div>
 
   <footer th:replace="pageFragments/Footer"></footer>
