--- a/src/main/resources/templates/pageFragments/Navbar.html
+++ b/src/main/resources/templates/pageFragments/Navbar.html
@@ -34,12 +34,12 @@
                                 <h4>AdminLogin</h4>
                             </div>
                             <div class="d-flex flex-column text-center">
-                                <form action="/AdminPage/getAdminPage">
+                                <form action="/MainPage/adminLogin">
                                     <div class="form-group">
-                                        <input type="username" class="form-control" id="email1"placeholder="Your Username">
+                                        <input type="username" class="form-control" name="username" id="email1"placeholder="Your Username">
                                     </div>
                                     <div class="form-group">
-                                        <input type="password" class="form-control" id="password1" placeholder="Your Password...">
+                                        <input type="password" class="form-control" name="password" id="password1" placeholder="Your Password...">
                                     </div>
                                     <button type="submit" class="btn btn-info btn-block btn-round">Login</button>
                                 </form>
